# inkypal

./: .gitignore  AGENTS.md  LICENSE  README.md  README.txt  pyproject.toml  requirements.txt
.agents/skills/build-binaries/: SKILL.md
.agents/skills/build-binaries/scripts/: build-emulated-executable.sh
.agents/skills/generate-display-image/: SKILL.md
.agents/skills/new-version/: SKILL.md
.agents/skills/new-version/scripts/: release-version.sh
.github/: dependabot.yml
.github/workflows/: ci-release.yml
.scripts/: release-version.sh
inkypal/: __init__.py  __main__.py  app.py  display.py  faces.py  network.py  render.py  waveshare_v4.py
src/inkypal/: __init__.py  ai.py  api.py  app.py  config.py  display.py  faces.py  gotify.py  render.py  update.py
systemd/: inkypal@.service
tests/: test_ai.py  test_api.py  test_config.py  test_display.py  test_faces.py  test_gotify.py  test_render.py  test_update.py
